-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.14.0
-
None
-
-
47dfc16eee2526e8e46ab8866ae88a550688b8c5 (qt-creator/qt-creator/4.14)
When Ctrl+Clicking on e.g. a method definition, the declaration is only opened for the first time.
- Open qtcreator-git/src/libs/utils/fancylineedit.cpp.
- Ctrl+Click on "setValidationFunction" in "void FancyLineEdit::setValidationFunction(const FancyLineEdit::ValidationFunction &fn)".
- Notice how the declaration is opened in the header file.
- Close the header file again.
- Perform step 2 again.
Actual result: The declaration in the header file is not opened. Not even the header file is opened.
Expected result: Same as in step 3.
- relates to
-
QTCREATORBUG-22833 Follow Symbol Under Cursor is very slow, sometimes doesn't work at all
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-25193 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
329378,2 | ClangCodeModel: Work around race condition when closing editors | 4.14 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |